# advent2020

./: README.md  Rakefile.rb  advent.cabal  hie.yaml
app/: Main.hs
data/: Day9Test.txt
src/: Advent.hs
src/Advent/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day17.hs  Day18.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  MParseUtils.hs  ParseUtils.hs
test/: Spec.hs
test/AdventSpec/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day17.hs  Day18.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs
