cabal-version:       3.0
name:                advent
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             MIT
license-file:        LICENSE
author:              Scott Sedgwick
maintainer:          Scott Sedgwick <scott.sedgwick@gmail.com>
copyright:           2020 Scott Sedgwick
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.1

common common-options
  build-depends:       base ^>= 4.14.0.0
                     , cond
                     , containers
                     , lens
                     , megaparsec
                     , mtl
                     , parsec
                     , safe
                     , split
                     , unix
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

  default-extensions:  DerivingStrategies
                     , OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Advent
  other-modules:       Advent.ParseUtils
                     , Advent.MParseUtils
                     , Advent.Day1
                     , Advent.Day2
                     , Advent.Day3
                     , Advent.Day4
                     , Advent.Day5
                     , Advent.Day6
                     , Advent.Day7
                     , Advent.Day8
                     , Advent.Day9
                     , Advent.Day10
                     , Advent.Day11
                     , Advent.Day12
  ghc-options:         -Wmissing-export-lists

executable advent-exe
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       advent
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       -Wmissing-export-lists

test-suite advent-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       AdventSpec.Day1
                     , AdventSpec.Day2
                     , AdventSpec.Day3
                     , AdventSpec.Day4
                     , AdventSpec.Day5
                     , AdventSpec.Day6
                     , AdventSpec.Day7
                     , AdventSpec.Day9
                     , AdventSpec.Day10
                     , AdventSpec.Day11
                     , AdventSpec.Day12
  build-depends:       advent
                     , hspec
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
